fix: updateTask bug that drags it to the end of the list, now you can drag task fully along vertical alignment of the specific category style: isDragging background & border colors

--- a/src/styles/category.scss
+++ b/src/styles/category.scss
@@ -8,6 +8,7 @@
   align-items: stretch;
   justify-content: flex-start;
   flex-direction: column;
+  min-height: 100vh;
 
   .header {
     margin: 5px;
