--- a/src/styles/task.scss
+++ b/src/styles/task.scss
@@ -12,11 +12,11 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  height: 100%;
 
   .task {
     transition: background .2s ease-in-out;
 
-    border: 1px lightgrey solid;
     margin: 5px 5px 0 5px;
     display: flex;
     justify-content: space-between;
